tests/scripts/errors/parse/class_missing_name.cdo
CLASS = (self) { self.x = 1; };
